--- a/TeleQ.ipynb
+++ b/TeleQ.ipynb
@@ -257,6 +257,7 @@
     "# Step 2: Convert the string to binary\n",
     "binary_data = string_to_binary(user_input)\n",
     "print(\"\\nBinary Representation:\\n\", binary_data)\n",
+    "global_received_bits = []\n",
     "\n",
     "print(\"\\n\\nA sample representation of the teleportation circuit (default bit is 0):\")\n",
     "\n",
